fix: fix the overflow-x in the pages

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -12,6 +12,10 @@ body,
     height: 100vh;
 }
 
-body, input, button, textarea {
+body,
+input,
+button,
+textarea {
     font: 600 18px Nunito, sans-Serif;
+    overflow-x: hidden;
 }
